<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="#e3e3e3">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#d1d1d1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/ves"
                android:layout_margin="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:ems="10"
                android:numeric="integer"
                android:id="@+id/editTextVes"

                android:layout_margin="10dp"
                android:text="@string/input_your_ves"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1d1d1"
            android:layout_margin="5dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/rost"
                android:layout_margin="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:ems="10"
                android:numeric="integer"
                android:id="@+id/editTextRost"
                android:layout_margin="10dp"
                android:text="@string/input_your_rost"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:layout_margin="5dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/check_smoking"
                android:layout_marginLeft="30dp"
                android:id="@+id/textView6" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_checkbox_design"
                android:id="@+id/checkBoxSmoking"
                android:layout_marginLeft="80dp"
                android:layout_weight="0.2" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d1d1d1"
        android:layout_margin="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/your_pol"
                android:id="@+id/textView7"
                android:gravity="center"/>
        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/spinnerPol"
            android:background="#ffd5fe" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginRight="10dp"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageButton"
            android:src="@drawable/next1"
            android:layout_gravity="right"

            android:visibility="visible" />




    </LinearLayout>

</LinearLayout>
